# UsbTurnoffTimer

./: CMakeLists.txt  LICENSE  README.md  toolchain.cmake
doc/: STC8G1K08-8PIN.cfg  stcHeaderRewording.py
src/: 8051_helpers.h  CMakeLists.txt  auxiliaries.h  buttontimed.c  buttontimed.h  configuration.h  i2c_bitbang.c  i2c_bitbang.h  main.c  pinout.h  prescaler.h  rotaryencoder.c  rotaryencoder.h  specifics.h  statemachine.h  static_assert.h  stc8g.h  tm1637display.h  tm1637driver.c  tm1637driver.h  unused.h
src/implementations/: CMakeLists.txt  auxiliaries_absoluteValue_int8.c  buttontimed.c  buttontimed_init.c  buttontimed_releasedAfterLong.c  buttontimed_releasedAfterShort.c  buttontimed_update.c  rotaryencoder.c  rotaryencoder_getAndResetAccumulatedRotation.c  rotaryencoder_init.c  rotaryencoder_update.c  specifics_buttonRawDurationConversion_.c  specifics_millis.c  specifics_minutesOrSecondsToDuration.c  specifics_rotaryEncoderRotationAppliedToMinutes.c  specifics_rotaryEncoderRotationAppliedToMinutesOrSeconds.c  specifics_rotaryEncoderRotationToMinutesConversion.c  statemachine_Basics.c  statemachine_Reset.c  tm1637display_Characters.c  tm1637display_DisplayData.c  tm1637display_RenderColon.c  tm1637display_RenderDuration.c  tm1637display_RenderDurationMinutes.c  tm1637display_RenderDurationMinutesOrSeconds.c  tm1637display_RenderNumberSigned.c  tm1637display_RenderNumberUnsigned.c
